@@ -1,5 +1,9 @@
 2019-03-08  Jason Merrill  <jason@redhat.com>
 
+	PR c++/88869 - C++17 ICE with CTAD and explicit specialization.
+	* pt.c (do_class_deduction): Don't include explicit specialization
+	args in outer_args.
+
 	PR c++/88419 - C++17 ICE with class template arg deduction.
 	* pt.c (make_template_placeholder): Set TYPE_CANONICAL after
 	CLASS_PLACEHOLDER_TEMPLATE.
